Página Sobre: Concluída

--- a/html/sobre.html
+++ b/html/sobre.html
@@ -19,8 +19,7 @@
             <li><a href="../html/wl.html">White List</a></li>
             <li><a href="../html/servidores.html">Servidores</a></li>
             <li><a href="https://discord.gg/QsYqCMm" target="_blank">Discord</a></li>
-
-
+            <li><a href="#" class="donate"><b>$$$</b></a></li>
         </ul>
     </div>
 
@@ -62,7 +61,7 @@
                             Caso tenha se interessado e não faz parte da nossa comunidade faça nossa <b>WHITE LIST</b> e
                             entre em nosso <b> DISCORD</b>.
                         </p>
-
+                        <img src="../image/logo.png" alt="Logo" class="sobreLogo">
                     </div>
 
 
@@ -77,6 +76,9 @@
                         <h2>Como você pode doar?</h2>
                         <p>Para doar click no cifrão no canto superior direito, lá você será redirecionando para o nosso
                             /(Paypal)/. </p>
+
+                        <img src="../image/retrato.jpg" alt="" class="imgDoacao">
+
                     </div>
 
 
@@ -85,23 +87,49 @@
                     <h1>Projetos</h1>
                     <div class="artigos">
                         <h2>Nossos projetos atuais:</h2>
-                        <p>Para informações mais detalhadas de algum de nossos projetos vá para aba <b>SERVIDORES</b> !!</p>
-                        <ul>
-                            <li>->Green Ville</li>
-                            <li>->Golden City</li>
-                        </ul>
+                        <p>Para informações mais detalhadas de algum de nossos projetos vá para aba <b>SERVIDORES</b> !!
+                        </p>
+
+
+                        <img src="../image/white.png" alt="" class="projeto_list"> <label>Green Ville</label>
+                        <br>
+                        <img src="../image/white.png" alt="" class="projeto_list"> <label>Golden City</label>
+
                         <h2>Futuros Projetos:</h2>
-                        <ul>
-                            <li>->Rust</li>
-                            <li>->GTA V</li>
-                        </ul>
+                        <img src="../image/white.png" alt="" class="projeto_list"> <label>Rust</label>
+                        <br>
+                        <img src="../image/white.png" alt="" class="projeto_list"> <label>GTAV</label>
+                        <br>
+                        <img src="../image/white.png" alt="" class="imgProjetos">
                     </div>
 
                 </li>
                 <li id="infoStaff" class="animacaoPre">
                     <h1>Staff</h1>
-                    <div>
-                        <h3>Conheça um pouco da nossa Staff.</h3>
+
+                    <h3>Conheça um pouco da nossa Staff.</h3>
+                    <div class="staff_perfil">
+                        
+                        <img src="../image/fundo8.jpg" alt="" class="imgStaff">
+                    
+                        <div>
+                        <h2>Yasmin Carvalho</h2>
+                        <p>Olá meu nome é Yasmin, tenho 17 anos. Jogo desde os 6 anos e sou apaixonada por programação.</p>
+                        </div>
+                    </div>
+                    <div class="staff_perfil">
+                        <img src="../image/fundo8.jpg" alt="" class="imgStaff">
+                        <div>
+                        <h2>Yasmin Carvalho</h2>
+                        <p>Olá meu nome é Yasmin, tenho 17 anos. Jogo desde os 6 anos e sou apaixonada por programação.</p>
+                        </div>
+                    </div>
+                    <div class="staff_perfil">
+                        <img src="../image/fundo8.jpg" alt="" class="imgStaff">
+                        <div>
+                        <h2>Yasmin Carvalho</h2>
+                        <p>Olá meu nome é Yasmin, tenho 17 anos. Jogo desde os 6 anos e sou apaixonada por programação.</p>
+                        </div>
                     </div>
 
 
