--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="haufenTitulo">
             <div class="social" id="soc">
             
-            <img src="./image/insta.png" alt="" id="imgInsta">
-            <img src="./image/twitter.png" alt="" id="imgTwt">
+            <img src="./image/instaW.png" alt="" id="imgInsta">
+            <img src="./image/twitterW.png" alt="" id="imgTwt">
         </div>
         <img class="logo" src="./image/logo.png" alt="">
         <h1>Comunidade Haufen</h1>
