--- a/html/servidores.html
+++ b/html/servidores.html
@@ -11,7 +11,7 @@
 <body>
     <div class="barra">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../index.php">Inicio</a></li>
             <li><a href="../html/wl.html" >White List</a></li>
             <li><a href="https://discord.gg/QsYqCMm" target="_blank" >Discord</a></li>
             <li><a href="../html/sobre.html" >Sobre</a></li>
