--- a/html/wl.html
+++ b/html/wl.html
@@ -17,7 +17,7 @@
 
     <div class="barra">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../index.php">Inicio</a></li>
             <li><a href="../html/servidores.html" >Servidores</a></li>
             <li><a href="https://discord.gg/QsYqCMm" target="_blank" >Discord</a></li>
             <li><a href="../html/sobre.html" >Sobre</a></li>
