Página Servidores: Concluída

--- a/html/servidores.html
+++ b/html/servidores.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,139 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>Servidores - Haufen</title>
 </head>
+
 <body>
-    <div class="barra">
+    <nav class="barra">
         <ul>
             <li><a href="../index.php">Inicio</a></li>
-            <li><a href="../html/wl.html" >White List</a></li>
-            <li><a href="https://discord.gg/QsYqCMm" target="_blank" >Discord</a></li>
-            <li><a href="../html/sobre.html" >Sobre</a></li>
-            
-            
+            <li><a href="../html/wl.html">White List</a></li>
+            <li><a href="https://discord.gg/QsYqCMm" target="_blank">Discord</a></li>
+            <li><a href="../html/sobre.html">Sobre</a></li>
+
+
         </ul>
-    </div>
+    </nav>
+
+    <section>
+        <div class="slide" id="golden">
+            <div class="spaceCity">
+                <img src="../image/golden.png" alt="" class="imgCity">
+                <h1 class="titGolden"> Golden City</h1>
+            </div>
+            <div class="serv">
+                <h2>O que é Golden City ?</h2>
+                <p>Golden City é o nosso servidor de Role Play do jogo ARMA III(3), nele somos cidadões e podemos
+                    trabalhar em várias coisas, entrar em facções e até mesmo se eleger como prefeito podendo fazer
+                    alterações em impostos e outros. Sistema esse que só pode ser encontrado em nosso servidor. O RP de
+                    Golden City, assim como Green Ville, é um hard RP. Então devemos lembrar que você necessitara
+                    interagir com os outros cidadões para conseguir suas coisas. Vale a pena ressaltar que o mod
+                    principal Golde City Roleplay é um mod criado pela nossa staff para o nosso servidor, com o objetivo
+                    de trazer uma experiência única no nosso RP. </p>
+
+                <h2>ModPack</h2>
+                <ul>
+                    <li>Golden City Roleplay (Mod Exclusivo)</li>
+                    <li>Task Force Radio</li>
+                    <li>CBA_A3</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="spaceCity">
+                <img src="../image/green.png" alt="" class="imgCity">
+                <h1 class="titGreen"> Green Ville</h1>
+            </div>
+            <div class="serv">
+                <h2>O que é Green Ville ?</h2>
+                <p>Green Ville é o nosso servidor de Role Play do jogo DayZ, nele somos sobreviventes de um mundo
+                    pós-apocalítico. Em um RP voltado mais para a sobrevivência, em Green Ville podemos criar
+                    comunidades, bases, amigos e inimigos, mas lembre-se, sempre tentando sobreviver. Para maior
+                    imersividade e para não ser punido leia as regras </p>
+
+                <h2>ModPack</h2>
+                <ul>
+                    <li>[Remastered] Arma Weapon Pack</li>
+                    <li>Notes</li>
+                    <li>GoreZ</li>
+                    <li>CreepyZombies</li>
+                    <li>MedicalAttention</li>
+                    <li>MuchStuffPack</li>
+                    <li>MunghardsItempack</li>
+                    <li>DeerIsle</li>
+                    <li>GVRP (Mod Exclusivo)</li>
+                    <li>Community-Online-Tools</li>
+                    <li>CF</li>
+                </ul>
+                <h2>História</h2>
+                <h4>07 JANEIRO DE 2019</h4>
+
+                <p>
+                    <b> Fox News;</b> Muito bom dia meus caros espectadores! Foi registrada hoje a primeira morte pelo
+                    novo
+                    vírus HG-P4, os cientistas ainda não sabem muito sobre a origem desse vírus, mas um estudo básico
+                    feito no laboratório do governo russo indica que seja um vírus existente no mundo desde meados de
+                    1980 que sofreu grande mutação devido ao mal descarte de tecnologias radioativas e poluição, sabe-se
+                    que o vírus tem alto índice de contágio por ser disseminado facilmente pelo ar, mas somente um caso
+                    foi confirmado até hoje, mais atualizações fique ligado na Fox News. </p>
+
+
+                <h4>16 JANEIRO DE 2019</h4>
+                <p>
+                    <b>Fox News;</b> Uma boa noite a todos espectadores, estamos aqui hoje com o presidente Olak Diak,
+                    para falar
+                    um pouco sobre o vírus HG-P4, que vem se disseminando no país em uma velocidade fora de controle,
+                    chegando a 15.000 casos em 1 semana.
+                    <br>
+                    [...]
+                    <br>
+                    <b> Olak Diak;</b> Agradeço a oportunidade de falar em rede nacional sobre essa disseminação viral
+                    que está
+                    acontecendo, por enquanto só sabemos que essa doença é disseminada pelo ar, podendo passar de uma
+                    pessoa
+                    para outra como uma gripe comum, por enquanto toda nossa recomendação é o isolamento total, fiquem
+                    em
+                    casa, será distribuídos comidas para todas famílias que serão deixadas na porta de suas casas pelo
+                    exército, quaisquer atualizações estarei entrando ao-vivo para comunicar toda a população!</p>
+
+                <h3>O ÚLTIMO CONTATO</h3>
+                <h4>Fox News; 03 Fevereiro de 2019</h4>
+
+                <p> <b>HORAS - 7.00 P.M</b>
+                    <br>
+                    Tudo virou um caos! infelizmente a comida está acabando, o exercito não tem mais recursos bélicos e
+                    suprimentos para manter a ordem da população, não temos mais noticias da real situação que se
+                    encontra o mundo, o exército abriu cerca de 10 centros de refugiados, as evacuações continuam,
+                    aguarde nos centros de suas cidades para a chegada da guarda nacional, acreditamos que tudo ficará
+                    bem!
+                    <br>
+                    <br>
+                    <b> HORAS - 17.30 P.M</b>
+                    <br>
+                    Os primeiros contaminados estão apresentando comportamento estranhos pós morte, segundo cientistas e
+                    médicos a morte cerebral não acontece, possibilitando movimentação de membros inconscientemente,
+                    infelizmente não sabe se isso acontece com todos por ser um fato que aconteceu com menos de 30% dos
+                    mortos pelo vírus, DEUS TENHA PIEDADE DE NÓS!</p>
+
+                <h3>O FIM DO INÍCIO DE TUDO - 05 MAIO DE 2019</h3>
+
+                <p>O exercito ficou sem suprimentos, o Presidente Olak autoriza bombardeio e fuzilamento de todos civis
+                    em centros urbanos e centros de refugiados, já não há mais solução para humanidade, já é certo que
+                    após a morte pelo vírus HG-P4 em até 15 dias você irá virar um deles, um morto-vivo ou melhor um
+                    zumbi, muitas pessoas conseguiram fugir tentando salvar suas vidas de bombardeios ou dos
+                    fuzilamentos, não se tem uma cura, muitos tentam fugir de Deer Isle, mas sem muito exito, uma grande
+                    parte da população acredita que esse vírus não atingiu outros paises, mas infelizmente é algo que
+                    nunca saberemos.
+                    CAMBIO FINAL .</p>
+
+                <p># História escrita por Leon.</p>
+
+
+            </div>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
