--- a/html/sobre.html
+++ b/html/sobre.html
@@ -13,7 +13,7 @@
 <body>
 
 
-    <div class="barra">
+    <nav class="barra">
         <ul>
             <li><a href="../index.php">Inicio</a></li>
             <li><a href="../html/wl.html">White List</a></li>
@@ -21,7 +21,7 @@
             <li><a href="https://discord.gg/QsYqCMm" target="_blank">Discord</a></li>
             <li><a href="#" class="donate"><b>$$$</b></a></li>
         </ul>
-    </div>
+    </nav>
 
 
     <div class="test">
