--- a/html/wl.html
+++ b/html/wl.html
@@ -15,14 +15,14 @@
 
 
 
-    <div class="barra">
+    <nav class="barra">
         <ul>
             <li><a href="../index.php">Inicio</a></li>
             <li><a href="../html/servidores.html" >Servidores</a></li>
             <li><a href="https://discord.gg/QsYqCMm" target="_blank" >Discord</a></li>
             <li><a href="../html/sobre.html" >Sobre</a></li>
         </ul>
-    </div>
+    </nav>
 
 
 
